Revert "fix navbar on safari"
This reverts commit 6b2b982cf8fe57db8cdfcf5ad6adf972285bedb2.

--- a/src/navigation.css
+++ b/src/navigation.css
@@ -12,7 +12,6 @@ nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: relative;
 }
 
 nav ul {
@@ -38,7 +37,6 @@ nav.large-screens {
   position: -webkit-sticky;
   position: sticky;
   transition: top 0.3s;
-  display: block;
 }
 
 .nav-button {
